[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "patzm-crawlers"
version = "0.0.2"
authors = [
  { name="Martin Patz", email="martin@patz.family" },
]
dependencies = [
  "levenshtein",
  "pydantic",
  "selenium",
]
description = "A package that helps with web crawliner"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/patzm/crawlers"
"Bug Tracker" = "https://github.com/patzm/crawlers/issues"

[project.scripts]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tools.setuptools.packages.find]
include = ["patzm"]
